--- a/web/pages/contents/contents.html
+++ b/web/pages/contents/contents.html
@@ -6,7 +6,7 @@
 
 	<body>
 		<h1>Contents.html</h1>
-		<p>This is an html file inside of a folder inside of pages..</p>
+		<p>This is an html file inside of a folder inside of pages.</p>
 	</body>
 </html>
 		
